# trac

./: .envrc  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  SNIPPET.md  flake.nix
trac/: Cargo.toml
trac-common/: Cargo.toml
trac-common/src/: lib.rs
trac-ebpf/: Cargo.toml
trac-ebpf-cpu/: Cargo.toml
trac-ebpf-cpu/src/: main.rs  perf_event.rs
trac-ebpf-disk/: Cargo.toml
trac-ebpf-disk/src/: main.rs
trac-ebpf-mem/: Cargo.toml
trac-ebpf-mem/src/: main.rs  task.rs
trac-ebpf-net/: Cargo.toml
trac-ebpf-net/src/: main.rs  net.rs
trac-ebpf/src/: bpf_perf_event_data.rs  lib.rs  main.rs  task.rs  vmlinux.rs
trac-profiling-helpers/: Cargo.toml
trac-profiling-helpers/src/: lib.rs
trac-profiling-macros/: Cargo.toml
trac-profiling-macros/src/: lib.rs
trac/src/: cpu.rs  disk.rs  helpers.rs  main.rs  mem.rs  net.rs  typedefs.rs
xtask/src/: build_ebpf.rs  run.rs
